tests/ui/attributes/doc-attr-compile-error.rs
#[doc = compile_error!("my error message")]
//~^ ERROR my error message
fn main() {}
